# bme.Cplusplus-Programming-II

./: README.md
Ex1/: CMakeLists.txt  code project.docx  ex1.cpp
Ex2/: CMakeLists.txt  billionair.cpp  billionair.h  billionaire.h  ex2.cpp
Ex3/: CMakeLists.txt  main.cpp
Ex3/Ex3/: CMakeLists.txt
Ex3/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Ex4/: CMakeLists.txt  ex4.cpp
Ex5/: CMakeLists.txt  dataqueue.h  ex5.cpp
Ex6/: CMakeLists.txt
Ex6/src/app/acquisition/: VCamera.cpp  VCamera.h  desktop.ini  iVCamera.h  icamera.cpp  icamera.h
Ex6/src/app/common/: control.cpp  control.h  icontrol.cpp  icontrol.h
Ex6/src/ui/: widget.cpp  widget.h
Ex7/: CMakeLists.txt
Ex7/src/app/acquisition/: VCamera.cpp  VCamera.h  basecamera.cpp  basecamera.h  camerafactory.cpp  camerafactory.h  ivcamera.h  vrgbcamera.cpp  vrgbcamera.h
Ex7/src/app/common/: control.cpp  control.h
Ex7/src/ui/: widget.cpp  widget.h  widget.ui
